Fixed footer alignment

--- a/google.css
+++ b/google.css
@@ -7,7 +7,7 @@ div.header > ul {
 	float: right;
 }
 
-a.header, a.footer {
+a.header, li.left > a, li.right > a {
 	font-family: Arial, sans-serif;
 	font-size: 0.80em;
 	color: #676767;
@@ -61,19 +61,30 @@ a:link {
 	text-decoration: none;
 }
 
-#footer {
+footer {
+	display: table;
+	width: 100%;
 	height: 40px;
 	position: fixed;
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	padding: 3px;
 	background-color: #F2F2F2;
 }
 
 li {
 	display: inline;
 	margin: 0px 10px;
+}
+
+nav.left {
+	display: table-cell;
+	text-align: left;
+}
+
+nav.right {
+	display: table-cell;
+	text-align: right;
 }
 
 
